editing and checks

--- a/sportsWorld.html
+++ b/sportsWorld.html
@@ -88,20 +88,20 @@
 		<hr>
 		<p id="pb">For the home page, I wanted tiles which had a picture, and when hovered over, the associated text for
 			picturer would appear on top. These tiles were my second form of navigation, which allowed the user to navigate. </p>
-		<p id="pb">Learning how the <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp" id="pb" title="W3Schools"><u>hover
+		<p id="pb">During the project I was learning how the <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp" id="pb" title="W3Schools"><u>hover
 					overlay from W3Schools</u></a> works. I implemented the picture overlay for the home page.</p>
 		<p id="pb"><b id="bc">Problem:</b> The width of the picture overlay was the size of the picture or 100% of the width.</p>
 		<li id="pb">To make the picture overlay more user-friendly, I implemented a wrapper to centre the images and a 2
 			column responsive gallery. So on smaller devices, only one column would be shown as of a CSS media tag.</li>
-		<p id="pb">For my portfolio website, I also wanted a simple icon footer. This aesthetically pleasing for both web and
+		<p id="pb">For my portfolio website, I also wanted a simple icon footer. This is aesthetically pleasing for both web and
 			mobile devices. I have seen some website using the <a href="https://www.w3schools.com/icons/fontawesome_icons_brand.asp"
 			 id="pb" title="W3Schools"><u>'Awesome Fonts'</u></a> icons for social media links. This meant I did not have
 			download and worry about copyrights of the icons.</p>
 		<p id="pb"><b id="bc">Problem:</b> The code appeared to be correct, but the icons weren't showing up.</p>
 		<p id="pb"><b id="bc">Answer:</b> <b>Google it! </b>Whenever is have a problem in programming in Java or any other
 			language, I often Google it and use <a href="https://stackoverflow.com/questions/24922833/fontawesome-icons-not-showing-why"
-			 id="pb" title="W3Schools"><u>'Stack Overflow'</u></a> because more than often someone else have likely to has the
-			same problem. </p>
+			 id="pb" title="W3Schools"><u>'Stack Overflow'</u></a> because more than often someone else has had the 
+			same issue. </p>
 		<li id="pb">I was missing the Awesome Fonts import statement. (
 			https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" )</li>
 		</br>
@@ -202,13 +202,13 @@
 			<p id="pb">Login page for existing users. The Login details will be compared to the SQL table to see if there is a
 				matching username and password and either the user will receive a feedback message or is redirected to the next
 				page. </p>
-			<div class="hoverOverImage">
+			<!-- <div class="hoverOverImage">
 				<img src="projects/sportsworld/loginphp.png" alt="Sample PHP code" class="hoverOverImage-layer_bottom" id="conner_round"
 				 style="width:100%">
 				<div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">Sample PHP code for the login</div>
 				</div>
-			</div>
+			</div> -->
 			<hr>
 			<li id="pb">A forgotten password page, enable the user to input the user email, to retrieve instruction to recover
 				or set a new email. </li>
