--- a/wellingtonTransportation.html
+++ b/wellingtonTransportation.html
@@ -53,7 +53,7 @@
     <br>
     <div class="centerWrap">
         <p>Wellington Transportation was a yearlong (9 months) project with relevant stakeholders looking to develop a
-            transportation medium solution for Wellingtonians with the border sense. For this project, I had a choose a
+            transportation medium solution for Wellingtonians with the border sense. For this project, I had a to choose a
             transportation issue which I wanted to solve for Wellingtonians and saw the potential to design an
             individual
             or personal vehicle because of the low Vehicle occupancy rate and the higher cost of motor vehicles. </p>
