--- a/2Shakes.html
+++ b/2Shakes.html
@@ -59,10 +59,11 @@
         <h1 class="w">2Shakes CX Redesign</h1>
         <p>This project aims to improve the profile setup step of 2Shakes web application. The 2Shakes software is
             centralised around the idea of automating the currently paper-based processes that many bookkeepers and
-            accountants undergo. By improving the profile set up phase of the system accomplish an efficient
+            accountants undergo. By improving the profile set up phase of the system accomplish an efficient,
             user-friendly profile setup process as well as a visually appealing UX allowing for an intuitive process.
-            By achieving these goals 2Shakes will be able to overcome the barriers, such as converting customers on
-            trial to paying customers. </p>
+            By achieving these goals, 2Shakes will be able to overcome the barriers, such as converting customers on
+            trial to paying customers.
+        </p>
         <p>Furthermore, it will reduce the number of clients and potential clients asking for support services when
             setting up a profile. It will also mean clients are more inclined to convert into paying customers as they
             find the setting up process to be clean and easy. We will be achieving these goals on behalf of 2Shakes
@@ -95,7 +96,7 @@
         <h2>The project Sponsors (2Shakes) </h2>
         <p>The Project sponsors of the CX redesign project was <b>Mike Kelly</b>, the CEO of 2Shakes and <b>Ata
                 McGregor</b>, the
-            CXO, who we met on weekly basis (Tuesday 3:30 pm). We worked with the sponsors to redesign the UI/UX
+            CXO, who we met on a weekly basis (Tuesday 3:30 pm). We worked with the sponsors to redesign the UI/UX
             interface to make registration and setting up of profiles easier for users.</p>
         <h2 class="w2">Initial Research of sign up forms</h2>
         <p>Research of sign up forms other</p>
@@ -116,8 +117,8 @@
             2Shakes at the meeting and we each had slightly different taste to design, so it was great we see everyone
             perspective and implementation. </p>
         <img src="2shakes/inital wireframe overview.PNG" alt="Wireframes overview" class="cenimg" style="max-width: 800px"><br>
-        <p>Above is a overview of the wireframe design design by each member of the team starting off with Caradine's
-            wireframe tope left, followed by Vrutika's and Caradine's bottom left and mine (Smeet)</p>
+        <p>Above is an overview of the wireframe design by each member of the team starting off with Caradine's
+            wireframe top left, followed by Vrutika's and Caradine's bottom left and mine (Smeet)</p>
         <h3>My Initial Wireframes</h3>
         <div class="video-container" style="text-align: center;">
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTvkE3JU8D1hKYvkH0tyvVfmUHwtwl0qaynVkTUmKDiTFf4fUKQqoPsrC_aSRvwzQDtKnkrT8MTUMfb/embed?start=true&loop=true&delayms=3000"
@@ -125,7 +126,8 @@
                 webkitallowfullscreen="true"></iframe>
         </div>
         <p>My initial wireframes (high fidelity) is presented in the slides above bring innovative and creative
-            features to make the user experience better for the 2Shakes sign-up process. (Caption is in purple text in
+            features to make the user experience better for the 2Shakes sign-up process. (Caption is in the purple text
+            in
             the sides)</p>
         <h3>Other Members Initial Wireframes</h3>
         <div class="video-container" style="text-align: center;">
@@ -133,12 +135,11 @@
                 frameborder="0" width="1123" height="823" allowfullscreen="true" mozallowfullscreen="true"
                 webkitallowfullscreen="true"></iframe>
         </div>
-        <p>Above the other members wireframe designs, starting off with Priya's wireframe, followed Vrutika and
-            Caradine's</p>
+        <p>Above the other member's wireframe designs, starting with Priya's wireframe followed Vrutika and Caradine's</p>
         <h3>Week 4 Wireframes Feedback</h3>
-        <p>In our meeting with 2Shakes we had each recieved some feedback. We were told that overall all of the
+        <p>In our meeting with 2Shakes, we had each received some feedback. We were told that overall all of the
             wireframe had some good aspects/features in our individual designs that we could implement and combine into
-            a single group wireframe. </p>
+            a single group wireframe.</p>
         <h3>Revised Group Wireframe and Sponsor Feedback</h3>
         <div class="iframe-container">
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQBHoMG8VB851R4EBHb8DlTsi7ZGYo8Ww0wkZeTlj8dWmRMi6EfYna9CpHEBA-MBkmVgpoEbs2FMb_i/embed?start=true&loop=true&delayms=2000"
@@ -190,8 +191,8 @@
         <p>The design above shows that when the user hovers over the tiles, the menu expands and also on the right-hand
             side the tools and tips can be minimised. </p>
         <h3>Meeting With Mike (Sponsor) </h3>
-        <p>During the university break, we emailed Mike the project sponsor to have look at our concepts and he
-            collated all the design and presented his own version of the UI parttens or wireframes. </p>
+        <p>During the university break, we emailed Mike the project sponsor to have a look at our concepts, and he
+            collated all the design and presented his own version of the UI patterns or wireframes.</p>
         <div class="video-container1" style="text-align: center;">
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSbKoiZb7TP6mcOYHn9t5mnF8FkDDhj3gAQaEYcUBOcGLKU6x4HzlRAX3PQsv2dIewnEwgxrarlHYJU/embed?start=true&amp;loop=true&amp;delayms=2000"
                 width="1280" height="749" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
@@ -215,18 +216,19 @@
         <img src="2shakes/reviewsignup.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
         <p>We developed various UI concepts for the profile sign-up form. The review phases allow the user to verify
             the information which has inputted and allows the user to edit their details if necessary. </p>
-        <p>When meeting 2Shakes they were accepting and happy with the layout and styling changes. We incorpated into
-            our design so that when Skip was pressed, a pop-up notification would appear on the page giving users an
-            option to skip the other stages of the profile set up and get straight to signing up clients or they could
-            resume filling in their profile information. This is the final update. </p>
+        <p>When meeting 2Shakes, they were accepting and happy with the layout and styling changes. We incorporated
+            into our design so that when Skip was pressed, a pop-up notification would appear on the page giving users
+            an option to skip the other stages of the profile set up and get straight to signing up clients or they
+            could resume filling in their profile information. </p>
         <img src="2shakes/the chosen traning colour.PNG" alt="New concept" class="cenimg" style="max-width: 800px"><br>
-        <p>Original training environment included a salmon coloured background, instead we went with a teal colour as
+        <p>Original training environment included a salmon coloured background. Instead, we went with a teal colour as
             it is different enough from the blue but does not take away from the 2Shakes orange. This colour was
-            recommended by Mike and it worked out reasonably well.</p>
+            recommended by Mike, and it worked out reasonably well.
+        </p>
         <video width="400" controls autoplay loop>
             <source src="2shakes/Prototype_RecordingV1.mov" type="video/mp4">
         </video>
-        <p id="torefection"> Demo Video of the 2Shakes Profile set up prototype for the CX redesign.</p>
+        <p id="torefection"> Demo Video of the 2Shakes Profile set up the prototype for the CX redesign.</p>
         <h3 class="w">Reflection</h3>
         <h4>Success Of The Project</h4>
         <P>The success of our project was dependant on being able to meet requirements from the project brief. This
