--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -83,7 +83,7 @@
             <li><b>Sinny: </b>Content Manager (produce some content & gathered icons and helped in the production line
                 application.</li>
             <li id="planning"><b>Heba: </b> Java GUI Developer (produced the production line login GUI and learning
-                basics. (Away for 2 days.)</li>
+                basics.</li>
         </ul>
         <h1 class="w">Planning</h1>
         <h2>Project Deliverables</h2>
@@ -93,7 +93,7 @@
             <li>Final report (Submit by Sunday 18th November) </li>
         </ol>
         <ul class="dark">
-            <li>This was a 2-week project and a week consist of 4 days. </li>
+            <li>This was a 2-week project and a week consisting of 4 days. </li>
         </ul>
         <h2>App Stakeholders </h2>
         <ul class="dark">
