--- a/aboutme.html
+++ b/aboutme.html
@@ -93,7 +93,7 @@
                 creative minded person, I enjoy thinking about new ways to improve things, to build solutions for
                 issues. I believe that to predict the future; you have to create the future or very much be part of the
                 forefront of changing technology and being innovative.</p>
-            <p style="color: black">Currently, I am Working on updating and adding past projects to the website,
+            <p style="color: black">Currently, I am working on updating and adding past projects to the website,
                 enhancing the
                 user experience. Along with the site, I am learning Android Studio and looking to convert java
                 applications to Android apps. I am also planning to make a native application for construction
