--- a/sportsWorld.html
+++ b/sportsWorld.html
@@ -6,7 +6,7 @@
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
 	<script>
-	window.dataLayer = window.dataLayer || [];
+		window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
@@ -58,25 +58,27 @@
 		<!-- project link button -->
 		<a id="butproto" href="https://smeet-patel.github.io/SportsWorld/" target="_blank">View
 			Sports World Project</a>
+		<a id="gitbutton" href="https://github.com/smeet-patel/SportsWorld" target="_blank"><i class="fa">&#xf09b;</i>
+			Open Project on GitHub (Source Code)</a>
 		<h2>Objective:</h2>
 		<p id="pb">Create a website or web application using the five languages <b>(HTML, CSS, Javascript and PHP with
 				MariaDB which uses SQL)</b>.</p>
 		<h2>Proposes of the project:</h2>
-		<li id="pb">It has been some time since I have personally done some HTML, CSS apart from Workshop tutoring at VUW for
+		<li id="pb">It had been some time since I had personally done some HTML, CSS apart from Workshop tutoring at VUW for
 			INFO 101. </li>
-		<li id="pb">Secondly wanted build on my Javascript knowledge. </li>
+		<li id="pb">Secondly, I wanted build on my Javascript knowledge. </li>
 		<li id="pb">I wanted to learn about PHP and to use MariaDB. </li>
-		<p id="pb">So far I have been limited integrating SQL with the web-based application and have used JSON data
-			structure before. Since I am using this personal project as a foundation for my future web-based projects, I have
+		<p id="pb">So far I have been limited in integrating SQL with the web-based application and have used JSON data
+			structure before. Since, I am using this personal project as a foundation for my future web-based projects, I have
 			restricted myself with the time constraint of <b>3 days</b> (during own time, after usual daily activities).</p>
 		<span id="day1"></span>
 		<p id="pb">Sports World is a website which is a central sports supporter site for various teams and athletes. It also
 			has a Login and new user registration which uses PHP and SQL to make the website more useful.</p>
 		<h3 class="w">Day 1</h3>
-		<li id="pb">Firstly I learnt how to set up a web server on my laptop using Ubuntu.</li>
-		<li id="pb">Using Ubuntu, made a user and created a directory path to the folder on my device, this enabled me to
+		<li id="pb">Firstly, I learnt how to set up a web server on my laptop using Ubuntu.</li>
+		<li id="pb">Using Ubuntu I made a user and created a directory path to the folder on my device, this enabled me to
 			have a working site on my localhost.</li>
-		<li id="pb">To get started with the index page, I used my code from the early stages of my portfolio website for the
+		<li id="pb">To get started with the index page - I used my code from the early stages of my portfolio website for the
 			navigation and Banner.</li>
 		<br>
 		<div class="hoverOverImage">
@@ -88,19 +90,21 @@
 		<hr>
 		<p id="pb">For the home page, I wanted tiles which had a picture, and when hovered over, the associated text for
 			picturer would appear on top. These tiles were my second form of navigation, which allowed the user to navigate. </p>
-		<p id="pb">During the project I was learning how the <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp" id="pb" title="W3Schools"><u>hover
+		<p id="pb">During the project I was learning how the <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp"
+			 id="pb" title="W3Schools"><u>hover
 					overlay from W3Schools</u></a> works. I implemented the picture overlay for the home page.</p>
 		<p id="pb"><b id="bc">Problem:</b> The width of the picture overlay was the size of the picture or 100% of the width.</p>
 		<li id="pb">To make the picture overlay more user-friendly, I implemented a wrapper to centre the images and a 2
 			column responsive gallery. So on smaller devices, only one column would be shown as of a CSS media tag.</li>
-		<p id="pb">For my portfolio website, I also wanted a simple icon footer. This is aesthetically pleasing for both web and
+		<p id="pb">For my portfolio website, I also wanted a simple icon footer. This is aesthetically pleasing for both web
+			and
 			mobile devices. I have seen some website using the <a href="https://www.w3schools.com/icons/fontawesome_icons_brand.asp"
 			 id="pb" title="W3Schools"><u>'Awesome Fonts'</u></a> icons for social media links. This meant I did not have
 			download and worry about copyrights of the icons.</p>
 		<p id="pb"><b id="bc">Problem:</b> The code appeared to be correct, but the icons weren't showing up.</p>
 		<p id="pb"><b id="bc">Answer:</b> <b>Google it! </b>Whenever is have a problem in programming in Java or any other
 			language, I often Google it and use <a href="https://stackoverflow.com/questions/24922833/fontawesome-icons-not-showing-why"
-			 id="pb" title="W3Schools"><u>'Stack Overflow'</u></a> because more than often someone else has had the 
+			 id="pb" title="W3Schools"><u>'Stack Overflow'</u></a> because more than often someone else has had the
 			same issue. </p>
 		<li id="pb">I was missing the Awesome Fonts import statement. (
 			https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" )</li>
@@ -256,6 +260,8 @@
 		</ol>
 		<a id="butproto" href="https://smeet-patel.github.io/SportsWorld/" target="_blank">View
 			Sports World Project</a>
+		<a id="gitbutton" href="https://github.com/smeet-patel/SportsWorld" target="_blank"><i class="fa">&#xf09b;</i>
+			Open Project on GitHub (Source Code)</a>
 		<!-- <h2 class="w">Coming soon...</h2> -->
 	</div>
 
