Edited fan site, sports world, hackathon

--- a/Vkfansite.html
+++ b/Vkfansite.html
@@ -54,11 +54,11 @@
     <div class="centerWrap">
         <!-- project link button -->
         <a id="butproto" href="http://smeet-patel.com/Fan-Site-VK/" target="_blank">View
-            Virat Kolhi's Fansite 2015</a><br>
+            Virat Kohli's Fansite 2015</a><br>
         <a id="gitbutton" href="https://github.com/smeet-patel/Fan-Site-VK" target="_blank"><i class="fa">&#xf09b;</i>
             Open Project on GitHub (Source Code)</a>
         <p>The purpose of this project was to create a user-friendly and professional looking fan site for Virat
-            Kolhi. </p>
+            Kohli. </p>
         <p>For my <u>previous project</u>, I learnt to use the proper HTML structure with the DOCTYPE, HEAD, body tag
             and nesting tags. For my Cyber CV, I was also required to use external CSS page, use of lists, a navigation
             bar which redirects to other HTML pages, embed a video and display images. </p>
@@ -96,9 +96,9 @@
             </div>
         </div>
         <h3 style="color: orange">Issues while creating the solution: </h3>
-        <p>I have never used the 'display' attribute in CSS, as a result, all the options display along aside
+        <!-- <p>I have never used the 'display' attribute in CSS, as a result, all the options display along aside
             each other and navigation bar was overflowing to the next line. After hours of experimenting and then
-            researching I was able to achieve what I wanted.</p>
+            researching I was able to achieve what I wanted.</p> -->
         <p>While redirecting the webpage, I was trying to link to section without an id reference, and once that was
             sorted, I also made the mistake of directly linking with code using '/' instead of '#' (e.g.
             page2.html/stats instead of page2.html#stats ).
@@ -128,8 +128,8 @@
         <p>The content within the wrapper div had an opacity of 80% to show the background image which I had created.
         </p>
         <h2>3. Embedding Social Media Post </h2>
-        <p>Virat Kolhi and his exploits have resulted in him becoming one of the most followed Indian and sports
-            player, hence embedding his social media post onto this fan page was important to ensure his fans can keep
+        <p>Virat Kohli and his exploits have resulted in him becoming one of the most followed Indian sports
+            players, hence embedding his social media post onto this fan page was important to ensure his fans can keep
             up to date with his achievements and messages.</p>
         <h3 style="color: orange">Issues: </h3>
         <p>Due to a bug in the Facebook embed link during this project, I was unable to embed the post successfully.
@@ -144,45 +144,45 @@
                 <img src="projects/fansite/VKfansiteIndexpage.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
                     id="conner_round" style="width:100%">
                 <div class="hoverOverImage-layer_top">
-                    <div class="hoverOverImage-text">Index page of Virat Kolhi fan site.</div>
+                    <div class="hoverOverImage-text">Index page of Virat Kohli fan site.</div>
                 </div>
             </div>
-            <li id="pb">Index page for Virat Kolhi fan site.</li>
+            <li id="pb">Index page for Virat Kohli fan site.</li>
             <br>
             <div class="hoverOverImage">
                 <img src="projects/fansite/VKrecordspage.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
                     id="conner_round" style="width:100%">
                 <div class="hoverOverImage-layer_top">
-                    <div class="hoverOverImage-text">Records page for Virat Kolhi fan site.</div>
+                    <div class="hoverOverImage-text">Records page for Virat Kohli fan site.</div>
                 </div>
             </div>
             <br>
-            <li id="pb">Records page for Virat Kolhi fan site.</li>
+            <li id="pb">Records page for Virat Kohli fan site.</li>
             <br>
             <div class="hoverOverImage">
                 <img src="projects/fansite/Vkgallery.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
                     id="conner_round" style="width:100%">
                 <div class="hoverOverImage-layer_top">
-                    <div class="hoverOverImage-text"> Virat Kolhi fan site gallery</div>
+                    <div class="hoverOverImage-text"> Virat Kohli fan site gallery</div>
                 </div>
             </div>
             <br>
-            <li id="pb">Virat Kolhi fan site gallery.</li>
+            <li id="pb">Virat Kohli fan site gallery.</li>
             <br>
             <div class="hoverOverImage">
                 <img src="projects/fansite/VKsocialmediapage.png" alt="Redirected for login user" class="hoverOverImage-layer_bottom"
                     id="conner_round" style="width:100%;">
                 <div class="hoverOverImage-layer_top">
-                    <div class="hoverOverImage-text"> Virat Kolhi fan site social media feed</div>
+                    <div class="hoverOverImage-text"> Virat Kohli fan site social media feed</div>
                 </div>
             </div>
             <br>
-            <li id="pb">Virat Kolhi fan site social media feed.</li>
+            <li id="pb">Virat Kohli fan site social media feed.</li>
         </div>
         <hr>
         <!-- project link button -->
         <a id="butproto" href="http://smeet-patel.com/Fan-Site-VK/" target="_blank">View
-            Virat Kolhi's Fansite 2015</a><br>
+            Virat Kohli's Fansite 2015</a><br>
         <a id="gitbutton" href="https://github.com/smeet-patel/Fan-Site-VK" target="_blank"><i class="fa">&#xf09b;</i>
             Open Project on GitHub (Source Code)</a>
 
