--- a/centralPolice.html
+++ b/centralPolice.html
@@ -94,7 +94,7 @@
         <div id="wire"></div><br>
         <h1 class="w">Wireframes </h1>
         <div style="margin: 0 auto;max-width: 800px; width: 100%;">
-            <p><b>Wireframe</b> were used a visual schematic or template of the screen to communicate interface and
+            <p><b>Wireframez</b> were used as visual schematic or template of the screen to communicate interface and
                 interaction design. I used a sketchy GUI window style using an application called Pencil. Menus,
                 buttons
                 text fields and other elements are displayed which it made better easier to follow while developing the
@@ -110,9 +110,9 @@
             <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px">
             <div id="feed"></div><br>
             <h1 class="w">User Feedback </h1>
-            <p>To get feedback from other people for my initial prototype, used Google forms for the user to give
+            <p>To get feedback from other people for my initial prototype, I used Google forms for the user to give
                 valuable
-                feedback based on the USE questionnaire questions. The main category of questions I asked was
+                feedback based on the 'USE' questionnaire questions. The main category of questions I asked was
                 usefulness,
                 ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
                 experience and interaction for the prototype.</p>
@@ -131,7 +131,7 @@
             <p>A landing page for Central Police which the user can answer calls or remove an entry from their incoming
                 list. </p>
             <img src="centralpolice/filledformcp.png" alt="" class="cenimg" style="max-width: 800px"><br>
-            <p>Answering the first call and the officer fills out the details and incident desperation as they ask the
+            <p>Answering the first call the officer fills out the details and incident description as they ask the
                 questions. </p>
             <img src="centralpolice/linkedcall.png" alt="" class="cenimg" style="max-width: 800px"><br>
             <p>The details of the incident appear to be familiar to the user. This call will be marked as repeat calls
@@ -142,7 +142,7 @@
             <p>After the form has been filled out the user can 'go to dispatch.' The user can view the location of the
                 incident to dispatch units. </p>
             <img src="centralpolice/dispatch.png" alt="" class="cenimg" style="max-width: 800px"><br>
-            <p>The officer dispatches the closest unit available. The displays the real-time tracking of the unit
+            <p>The officer dispatches the closest unit available. This displays the real-time tracking of the unit
                 dispatched and where they are to guide them if necessary.</p>
             <img src="centralpolice/findrecord.png" alt="" class="cenimg" style="max-width: 800px"><br>
             <p>Filtering records by typing into the search bar to match any detail displayed in the row. From this
