--- a/hackathon.html
+++ b/hackathon.html
@@ -57,8 +57,8 @@
 			the Smart Science Platform</a><br>
 		<a id="gitbutton" href="https://github.com/smeet-patel/hackathon" target="_blank"><i class="fa">&#xf09b;</i>
 			Open Project on GitHub (Source Code)</a>
-		<p>This Hackathon was an in collaboration with various secondary college around Wellington, Business Analysis,
-			UX designer and Software Developer like me. Various professional from corporate organisations such as
+		<p>This Hackathon was an collaboration with various secondary colleges around Wellington, Business analysists,
+			UX designer and Software Developers like me. Various professionals from corporate organisations such as
 			Deloitte, Xero, Datacom and Microsoft as were there as mentors to observe and help teams in projects. </p>
 		<h3 style="color: orange">First task: Identifying barriers to learning science. </h3>
 		<div style="margin: 0 auto;max-width: 800px; width: 100%;">
@@ -82,29 +82,29 @@
 		<p><b>Members </b>: Callum & Smeet (Software developers), Ryan Eagles From (Wellington Girls College) and 2
 			Business analysists.</p>
 		<h1 class="w">Day 1</h1>
-		<p>We had two deadlines to work towards which the first deliverable was to present our project concept to a
+		<!-- <p>We had two deadlines to work towards which the first deliverable was to present our project concept to a
 			couple of the other teams. The second deliverable was to present the final solution, based on the user
-			experience, level of innovation and how well we responded to the brief. </p>
+			experience, level of innovation and how well we responded to the brief. </p> -->
 		<h3 style="color: orange">Challenges of coming up with a project idea.</h3>
 		<p><b>Chosen Problem: </b>Information is not being provided in an interesting way for college students.</p>
-		<p>We had an enthusiastic from Student Ryan from Wellington Girls College who had a board interest in
+		<p>We had an enthusiastic student Ryan from Wellington Girls College who had a broad interest in
 			science and mention that their college was governed by may strict rules, which meant they weren’t able
-			to carry out science-based experiments to class injuries. </p>
-		<p>Coming up with a project concept proved to be quite challenging because topic was quite board.</p>
-		<p>Using my systems analysis interviewing and requirements gather knowledge which learnt during my
+			to carry out science-based experiments. </p>
+		<!-- <p>Coming up with a project concept proved to be quite challenging because topic was quite board.</p> -->
+		<p>Using my systems analysis interviewing and requirements to gather knowledge which I learnt during my
 			undergraduate degree, I was able to successfully able to help the team find the problem. </p>
 		<h3 style="color: orange">The 5 Whys?</h3>
 		<img src="projects/Hackathon/The5Whys.jpg" class="cenimg" style="max-width: 800px"><br>
 		<p>I decided to use the ‘5 Whys’ with Ryan to understand the issues more in depth. </p>
 		<p>I asked Ryan<B> “why do you think information is not being provided in an interesting way?”</B></p>
-		<p>1: Because we are not allowed to carry out particles. </p>
+		<p>1: Because we are not allowed to carry out practicals. </p>
 		<p><b>Why? </b>2: Because a girl in my class burnt her hand in the blue flame. We not allowed do anything in
 			the lab.</p>
 		<p><b>Why? </b>3: Therefore, we learn the theory for books.</p>
 		<p><b>Why? </b>4: And No one like to read for 40 minutes.</p>
 		<p><b>Why? </b>5: It is boring, and I don’t learn off that.</p>
 		<h3 style="color: orange">Solution</h3>
-		<p>To solve this problem, we decided to create an interest science platform, that allows science students like
+		<p>To solve this problem, we decided to create an interesting science platform, that allows science students like
 			Ryan to learn the theory of interesting videos and having an interesting simulation. </p>
 		<h3 style="color: orange">Concept Presentation</h3>
 		<div class="video-container1" style="text-align: center;">
@@ -116,48 +116,54 @@
 			because we don’t have much time and possibly just focus on something simple. We decided to make a basic
 			periodic table game. </p>
 		<h1 class="w">Day 2</h1>
-		<p>For the second day we had to create and present our solution. In the team, I was the only team member who
+		<p>For the second day we had to create and present our solution. 
+			<!-- In the team, I was the only team member who
 			has experience in web development. Callum made an accessibility keyboard for people with disabilities and
 			gathered resources for the web application such the images and element combination to make the product. The
 			two Business analyst was late and came after mid-day. They where tasked to change my original slides from
-			day 1 for the final presentation. </p>
+			day 1 for the final presentation.  -->
+		</p>
 		<h3 style="color: orange">Smart Science Platform menu</h3>
 		<img src="projects/Hackathon/hackathonHome.png" class="cenimg" style="max-width: 800px"><br>
-		<p>To represent the different topic and modules I created side navigation which student would be able to access
-			other science simulations which have been made available by the student's teacher. The teacher would be
-			able to track their student progress and parent would also be able to track their child's progress. </p>
+		<p>To represent the different topics and modules I created side navigation which students would be able to access
+			along with other science simulations which have been made available by the students teacher. The teacher would be
+			able to track their students progress and parents would also be able to track their childs progress. </p>
 		<h3 style="color: orange">Development of the Web App.</h3>
-		<p>Because of the shortage of both time and skills. The team had started researching ideals for and game
+		<p>Due to shortage of both time and skills. The team had started researching ideals for and game
 			implementation the day before. Callum started reaching into any periodic table which we could have used
 			from the internet by all had proven to be difficult because the table has a lot of elements, so it was
 			difficult to use any. </p>
-		<li>To display the periodic table, I created a table with 9 row and 18 columns with buttons inside them. </li>
-		<li>I created the periodic table to be responsive for devices such as tables and anything larger. Because of
+		<li>To display the periodic table, I created a table with 9 row and 18 columns with interactive buttons inside them. </li>
+		<li>The periodic table needed to be responsive for devices such as tables. Due to
 			the number of elements in the table, it is not ideal to use on a smartphone. </li>
 		<img src="projects/Hackathon/table.png" class="cenimg" style="max-width: 800px"><br>
 		<li>All element buttons display an atomic number and letter symbol. Elements have also been coloured coded
 			based on the type of element, such as metals and non-metals. </li>
 		<span id="reflection"></span>
-		<li>On hover of an element the element name would display and when click a discption of the element is
+		<li>On hover over an element the element name would display and when click a discption of the element is
 			displayed above the table. </li>
 		<h1 class="w">Reflection</h1>
 		<h3 style="color: orange">Challenges</h3>
-		<li>Devlopeing the game logic to create the formula was the most difficult challenge. I resloved this as I stored the
+		<li>Developing the game logic to create the formula was the most difficult challenge. I resolved this as I stored the
 			current element as variable and compare it with the following element and count the amount of time an element has
 			been press consecutively. If the element changes the counter resets the string builds on. I also had to create a
 			regex which removes and rewrites the pervious element with added number if element was the same. </li>
 		<img src="projects/Hackathon/gamefinished.png" class="cenimg" style="max-width: 800px"><br>
-		<li>Another challenge was creating the periodic table because it was a tedious task. </li>
+		<!-- <li>Another challenge was creating the periodic table because it was a tedious task. </li> -->
 		<h3 style="color: orange">Conclusion</h3>
-		<p>What an experience it has been! The Wellington Science Hackathon 2018 was full of energy and hectic chaos, but at
+		<p>What an experience it had been! The Wellington Science Hackathon 2018 was full of energy and hectic chaos, but at
 			the end, we all got through. I was very proud of what I able to produce as the sole web developer programmer in a
-			short time and with Ryans Vision which allowed the team to solve the problem and also the help of other team members
+			short time 
+			<!-- and with Ryans Vision which allowed the team to solve the problem and also the help of other team members
 			and lastly amazing mentors. The second day of the hackathon was stressful after a late night for me after hacking
-			away the building 118 element periodic table. Building the functionality was difficult on the second day as it had
+			away the building 118 element periodic table.  -->
+			Building the functionality was difficult on the second day as I had
 			to create the product equation, and a mentor I would like to give a huge thanks to is Clive Vermeulen from Xero for
 			guiding to fix and rebuild the algorithm for the equation. In the hackathon, I learnt more than what I initially
-			anticipated. However, one thing that could be improved is the team dynamics and effort from the business analysis
-			students. I hope to participate in more development hackathons in the future to create innovate solution and to have
+			anticipated. 
+			<!-- However, one thing that could be improved is the team dynamics and effort from the business analysis
+			students. -->
+			 I hope to participate in more development hackathons in the future to create innovate solutions and to have
 			fun in an energy packed environment. </p>
 		<br>
 		<hr>
