--- a/sportsWorld.html
+++ b/sportsWorld.html
@@ -57,29 +57,29 @@
 	<div class="centerWrap">
 		<!-- project link button -->
 		<a id="butproto" href="https://smeet-patel.github.io/SportsWorld/" target="_blank">View
-			Sports World Project</a>
+			Sports World Project</a><br>
 		<a id="gitbutton" href="https://github.com/smeet-patel/SportsWorld" target="_blank"><i class="fa">&#xf09b;</i>
 			Open Project on GitHub (Source Code)</a>
 		<h2>Objective:</h2>
 		<p id="pb">Create a website or web application using the five languages <b>(HTML, CSS, Javascript and PHP with
 				MariaDB which uses SQL)</b>.</p>
 		<h2>Proposes of the project:</h2>
-		<li id="pb">It had been some time since I had personally done some HTML, CSS apart from Workshop tutoring at VUW for
-			INFO 101. </li>
-		<li id="pb">Secondly, I wanted build on my Javascript knowledge. </li>
+		<li id="pb">It had been some time since I had personally done some HTML, CSS (apart from Workshop tutoring at VUW for
+			INFO 101). </li>
+		<li id="pb">I wanted build on my Javascript knowledge. </li>
 		<li id="pb">I wanted to learn about PHP and to use MariaDB. </li>
 		<p id="pb">So far I have been limited in integrating SQL with the web-based application and have used JSON data
 			structure before. Since, I am using this personal project as a foundation for my future web-based projects, I have
-			restricted myself with the time constraint of <b>3 days</b> (during own time, after usual daily activities).</p>
+			restricted myself with the time constraint of <b>3 days</b>.</p>
 		<span id="day1"></span>
 		<p id="pb">Sports World is a website which is a central sports supporter site for various teams and athletes. It also
 			has a Login and new user registration which uses PHP and SQL to make the website more useful.</p>
 		<h3 class="w">Day 1</h3>
-		<li id="pb">Firstly, I learnt how to set up a web server on my laptop using Ubuntu.</li>
+		<li id="pb">Firstly, I learnt how to set up a web server on my laptop using Ubuntu (linux based server).</li>
 		<li id="pb">Using Ubuntu I made a user and created a directory path to the folder on my device, this enabled me to
 			have a working site on my localhost.</li>
-		<li id="pb">To get started with the index page - I used my code from the early stages of my portfolio website for the
-			navigation and Banner.</li>
+		<!-- <li id="pb">To get started with the index page - I used my code from the early stages of my portfolio website for the
+			navigation and Banner.</li> -->
 		<br>
 		<div class="hoverOverImage">
 			<img src="earlyweb1.png" alt="Old Website" class="hoverOverImage-layer_bottom" id="conner_round">
@@ -89,10 +89,12 @@
 		</div>
 		<hr>
 		<p id="pb">For the home page, I wanted tiles which had a picture, and when hovered over, the associated text for
-			picturer would appear on top. These tiles were my second form of navigation, which allowed the user to navigate. </p>
+			the picture would appear on top. These tiles were my second form of navigation, which allowed the user to navigate. </p>
 		<p id="pb">During the project I was learning how the <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp"
 			 id="pb" title="W3Schools"><u>hover
-					overlay from W3Schools</u></a> works. I implemented the picture overlay for the home page.</p>
+					overlay from W3Schools</u></a> works. 
+					<!-- I implemented the picture overlay for the home page. -->
+				</p>
 		<p id="pb"><b id="bc">Problem:</b> The width of the picture overlay was the size of the picture or 100% of the width.</p>
 		<li id="pb">To make the picture overlay more user-friendly, I implemented a wrapper to centre the images and a 2
 			column responsive gallery. So on smaller devices, only one column would be shown as of a CSS media tag.</li>
@@ -117,9 +119,10 @@
 		</div>
 		<hr>
 		<p id="pb"><b id="bc">Failure:</b>
-			Having used Angular JS, I was confident that I could easily have many shows and hidden panels for some added
-			functionality for the content on the other pages. As eager as I am to learn, I had realised that changing the
-			visibility state of for the panels was not going to work with JavaScript.
+			Having used Angular JS, I was confident that I could easily have many hidden and show panels for some added
+			functionality for the content on the other pages. 
+			<!-- As eager as I am to learn, I had realised that changing the
+			visibility state of for the panels was not going to work with JavaScript. -->
 		</p>
 		<span id="day2"></span>
 		<p id="pb">I came to release that Angular JS is made for single page web applications, while Javascript was able to
@@ -149,7 +152,7 @@
 				<div class="hoverOverImage-text">PHP code to post and receive comments from MariaDB</div>
 			</div>
 		</div>
-		<p id="pb">When connecting to the databases, the user namer, passwords and databases name is required.</p>
+		<p id="pb">When connecting to the databases; the user name, passwords and databases name is required.</p>
 		<p id="pb">Using echo to print error when testing the web-application</p>
 		<div class="hoverOverImage">
 			<img src="projects/sportsworld/rugbyphp1.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round"
@@ -180,7 +183,7 @@
 				answer is close. If the answer is correct then they would be alerted answer is correct. </li>
 		</ol>
 		<h3 class="w">Day 3</h3>
-		<p id="pb">The last day assigned for this project. The soccer, cricket and login page was still to be completed.</p>
+		<p id="pb">The soccer, cricket and login page was still to be completed.</p>
 		<h2>Requirements for the last day.</h2>
 		<ol>
 			<li id="pb">Making a login system which can register new users to the database.</li>
@@ -194,7 +197,7 @@
 			</div>
 			<p id="pb">New User sign up page Inserts into SQL databases the user details.</p>
 			<hr>
-			<li id="pb">Secondly using the new user details from the new user to log in. </li>
+			<li id="pb">Secondly, using the new user details from the new user to log in. </li>
 			<br>
 			<div class="hoverOverImage">
 				<img src="projects/sportsworld/swlogin.jpeg" alt="Login page for existing users" class="hoverOverImage-layer_bottom"
@@ -225,7 +228,7 @@
 				</div>
 			</div>
 			<hr>
-			<li id="pb">Building a page which the user would be redirected to for a successful login. </li>
+			<li id="pb">Building a page in which the user would be redirected to for a successful login. </li>
 			<br>
 			<div class="hoverOverImage">
 				<img src="projects/sportsworld/swcs.jpeg" alt="Redirected for login user" class="hoverOverImage-layer_bottom" id="conner_round"
@@ -259,7 +262,7 @@
 			<hr>
 		</ol>
 		<a id="butproto" href="https://smeet-patel.github.io/SportsWorld/" target="_blank">View
-			Sports World Project</a>
+			Sports World Project</a><br>
 		<a id="gitbutton" href="https://github.com/smeet-patel/SportsWorld" target="_blank"><i class="fa">&#xf09b;</i>
 			Open Project on GitHub (Source Code)</a>
 		<!-- <h2 class="w">Coming soon...</h2> -->
